infrastructure/base/kube-prometheus-stack/grafana-embed-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-embed
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${domain}`) && PathPrefix(`/d/`)
      kind: Rule
      priority: 100
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
    - match: Host(`grafana.${domain}`) && PathPrefix(`/public/`)
      kind: Rule
      priority: 100
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: kube-prometheus-stack-tls
